Archive2/86/d62a342d4784ab/output
main.cpp: In function 'int main()':
main.cpp:14:31: error: use of deleted function 'void function(const Type&) [with Type = std::basic_string<char>]'
     function(std::string("ok"));
                               ^
main.cpp:10:6: error: declared here
 void function(const std::string&) = delete;
      ^
